added apple and pumpkin pies

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Chowdown
+title: Ma'am's Bittles
 email: andrew@andrewshaffer.tech
 description: The plain text recipe database for hackers
 baseurl: "https://recipes.shaffer.network"
