--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Ma'am's Bittles
+title: Ma'am's Vittles
 email: andrew@andrewshaffer.tech
 description: The plain text recipe database for hackers
 baseurl: "https://recipes.shaffer.network"
