--- a/_data/nutrients.yml
+++ b/_data/nutrients.yml
@@ -35,7 +35,7 @@ proteinContent:
   description: The number of grams of protein.
   unit: g
 saturatedFatContent:
-  name: saturates
+  name: saturated fat
   type: Mass
   description: The number of grams of saturated fat.
   unit: g
