--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Ma'am's Vittles
-email: andrew@andrewshaffer.tech
+email: owner@andrewshaffer.tech
 description: The plain text recipe database for hackers
 baseurl: "https://recipes.shaffer.network"
 language: "en"
